# live-scribe

./: .gitignore  README.md  live_scribe.py  llm_providers.py  pyproject.toml  requirements.txt  web_server.py
desktop/: README.md
desktop/scripts/: build-linux.sh  build-macos.sh  build-windows.ps1  setup.sh
desktop/src/: index.html
desktop/tauri/: Cargo.toml  Info.plist  tauri.conf.json
desktop/tauri/capabilities/: default.json
desktop/tauri/icons/: README.md  icon.icns
desktop/tauri/src/: lib.rs  main.rs
desktop/tests/: test_config.py
mobile/: App.tsx  README.md  app.json  jest.setup.js  package.json
mobile/__tests__/components/: TranscriptView.test.tsx
mobile/__tests__/services/: llm.test.ts  storage.test.ts
mobile/src/components/: DispatchButton.tsx  LLMResponseView.tsx  RecordButton.tsx  StatusBar.tsx  TranscriptView.tsx
mobile/src/hooks/: useAudioRecorder.ts  useLLM.ts  useRemoteServer.ts  useTranscription.ts
mobile/src/navigation/: AppNavigator.tsx
mobile/src/screens/: HistoryScreen.tsx  HomeScreen.tsx  SettingsScreen.tsx
mobile/src/services/: api.ts  audio.ts  llm.ts  storage.ts  transcription.ts
mobile/src/theme/: index.ts
mobile/src/types/: index.ts
tests/: conftest.py  test_buffer.py  test_conversation.py  test_core_enhancements.py  test_export_formats.py  test_integration.py  test_llm_providers.py  test_presets.py  test_streaming.py  test_system_audio.py  test_web_ui.py
web/: index.html
web/css/: style.css
web/js/: app.js  ui.js  websocket.js
