[package]
name = "live-scribe"
version = "0.1.0"
edition = "2021"
description = "Desktop app wrapper for Live Scribe"
license = "MIT"

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
tauri-plugin-global-shortcut = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[build-dependencies]
tauri-build = "2"
