[package]
name = "live-scribe"
version = "0.1.0"
edition = "2021"
description = "Desktop app wrapper for Live Scribe"
license = "MIT"

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
tauri-plugin-global-shortcut = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["blocking", "json"] }
open = "5"

[build-dependencies]
tauri-build = { version = "2", features = [] }
